Fix spacing

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,11 +41,6 @@ p {
   font-size: 0.9em;
 }
 
-
-body {
-
-}
-
 div .row {
   .col-sm-8 {
     h1 {
